--- a/final-project/index.html
+++ b/final-project/index.html
@@ -82,60 +82,62 @@
         <section id="services">
             <div class="servicecontent">
                 <h2>Our Services</h2>
-                <div class="digital">
-                    <img src="images/digital.jpg" alt="digital image" />
-                    <h3>Digital Transformation</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                        Donec sed dolor id quam eleifend vestibulum eu eu enim
-                    </p>
-                    <a href="#"> Digital Plans<i class="im im-play"></i></a>
-                </div>
-                <div class="marketing">
-                    <img src="images/marketing.jpg" alt="marketing image" />
-                    <h3>Marketing</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                        Donec sed dolor id quam eleifend vestibulum eu eu enim
-                    </p>
-                    <a href="#"> Marketing plans<i class="im im-play" class="playbutton"></i></a>
-                </div>
-                <div class="video">
-                    <img src="images/video.jpg" alt="video production image" />
-                    <h3>Video Production</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                        Donec sed dolor id quam eleifend vestibulum eu eu enim
-                    </p>
-                    <a href="#"> Video Plans<i class="im im-play" class="playbutton"></i></a>
-                </div>
-                <div class="web">
-                    <img src="images/web.jpg" alt="web image" />
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                        Donec sed dolor id quam eleifend vestibulum eu eu enim
-                    </p>
+                <div class="serviceblock">
+                    <div class="digital">
+                        <img src="images/digital.jpg" alt="digital image" />
+                        <h3>Digital Transformation</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                            volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                            nec
+                            metus.
+                            Donec sed dolor id quam eleifend vestibulum eu eu enim
+                        </p>
+                        <a href="#"> Digital Plans<i class="im im-play"></i></a>
+                    </div>
+                    <div class="marketing">
+                        <img src="images/marketing.jpg" alt="marketing image" />
+                        <h3>Marketing</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                            volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                            nec
+                            metus.
+                            Donec sed dolor id quam eleifend vestibulum eu eu enim
+                        </p>
+                        <a href="#"> Marketing plans<i class="im im-play" class="playbutton"></i></a>
+                    </div>
+                    <div class="video">
+                        <img src="images/video.jpg" alt="video production image" />
+                        <h3>Video Production</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                            volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                            nec
+                            metus.
+                            Donec sed dolor id quam eleifend vestibulum eu eu enim
+                        </p>
+                        <a href="#"> Video Plans<i class="im im-play" class="playbutton"></i></a>
+                    </div>
+                    <div class="web">
+                        <img src="images/web.jpg" alt="web image" />
+                        <h3>Web Development</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                            volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                            nec
+                            metus.
+                            Donec sed dolor id quam eleifend vestibulum eu eu enim
+                        </p>
                     <a href="#"> Web Plans<i class="im im-play" class="playbutton"></i></a>
                 </div>
-                <div class="print">
-                    <img src="images/print.jpg" alt="print image" />
-                    <h3>Print</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                        Donec sed dolor id quam eleifend vestibulum eu eu enim
-                    </p>
-                    <a href="#"> Print Plans<i class="im im-play" class="playbutton"></i></a>
+                    <div class="print">
+                        <img src="images/print.jpg" alt="print image" />
+                        <h3>Print</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                            volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                            nec
+                            metus.
+                            Donec sed dolor id quam eleifend vestibulum eu eu enim
+                        </p>
+                        <a href="#"> Print Plans<i class="im im-play" class="playbutton"></i></a>
+                    </div>
                 </div>
         </section>
         <section id="vision">
@@ -152,25 +154,31 @@
         <section id="team">
             <div class="teamcontent">
                 <h2>Our Team</h2>
-                <div class="team1">
-                    <img src="images/john.jpg" alt="john doe" class="johndoe" />
-                    <h3>John Doe</h3>
-                    <h4>CEO and Co-founder</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                    </p>
-                </div>
-                <div class="team2">
-                    <img src="images/bob.jpg" alt="bob" class="bobrite" />
-                    <h3>Bob Rite</h3>
-                    <h4>CEO and Co-founder</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                    </p>
+                <div class="teamblock">
+                    <div class="team1">
+                        <img src="images/john.jpg" alt="john doe" class="johndoe" />
+                        <div class="team1p"> 
+                            <h3>John Doe</h3>
+                            <h4>CEO and Co-founder</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                                volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                                nec
+                                metus.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="team2">
+                        <img src="images/bob.jpg" alt="bob" class="bobrite" />
+                        <div class="team2p">
+                            <h3>Bob Rite</h3>
+                            <h4>CEO and Co-founder</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                                volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                                nec
+                                metus.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -178,54 +186,54 @@
         <section id="contactus">
             <div class="contactcontent">
                 <h2>Contact us</h2>
-                <div class="message">
-                    <h3>Send us a message</h3>
-                    <form action="contact.html" method="GET">
-                        <div>
-                            <label for="fullname">Full name</label>
-                            <input id="fullname" type="text">
-                        </div>
-                        <div>
-                            <label for="email">Email</label>
-                            <input id="email" type="email">
-                        </div>
-                        <div>
-                            <label for="message">Your Message</label>
-                            <textarea id="message" rows="5"></textarea>
-                        </div>
-                        <button type="submit"> Send</button>
-                    </form>
-                </div>
+                <div class="contactflex">
+                    <div class="message">
+                        <h3>Send us a message</h3>
+                        <form action="contact.html" method="GET">
+                            <div>
+                                <label for="fullname">Full name</label>
+                                <input id="fullname" type="text">
+                            </div>
+                            <div>
+                                <label for="email">Email</label>
+                                <input id="email" type="email">
+                            </div>
+                            <div>
+                                <label for="message">Your Message</label>
+                                <textarea id="message" rows="5"></textarea>
+                            </div>
+                            <button type="submit"> Send</button>
+                        </form>
+                    </div>
 
-                <div class="hours">
-                    <h3>Hours of operation</h3>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Day</th>
-                                <th>Hours</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Monday-Friday</td>
-                                <td>9AM-6PM</td>
-                            </tr>
-                            <tr>
-                                <td>Saturday-Sunday</td>
-                                <td>Close</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="hours">
+                        <h3>Hours of operation</h3>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Day</th>
+                                    <th>Hours</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Monday-Friday</td>
+                                    <td>9AM-6PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Saturday-Sunday</td>
+                                    <td>Close</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="location">
+                    <h3>Location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
                 </div>
-            </div>
-
-            <div class="location">
-                <h3>Location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
             </div>
         </section>
     </main>
