--- a/final-project/index.html
+++ b/final-project/index.html
@@ -59,23 +59,25 @@
     <main class="container">
         <section id="aboutus">
             <div class="aboutcontent">
-                <img src="images/about-us.jpg" alt="image about us" />
-                <div class="about">
-                    <h2>About Us</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat
-                        imperdiet
-                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
-                        nec
-                        metus.
-                        Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus.
-                        Fusce
-                        molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu
-                        finibus
-                        vitae, placerat a augue. Vestibulum scelerisque odio est, quis congue neque mattis non.
-                        Curabitur
-                        consectetur a mi eget laoreet.
-                    </p>
+                <div class="aboutmore">
+                    <img src="images/about-us.jpg" alt="image about us" />
+                    <div class="about">
+                        <h2>About Us</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat
+                            imperdiet
+                            volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                            nec
+                            metus.
+                            Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus.
+                            Fusce
+                            molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu
+                            finibus
+                            vitae, placerat a augue. Vestibulum scelerisque odio est, quis congue neque mattis non.
+                            Curabitur
+                            consectetur a mi eget laoreet.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -142,12 +144,14 @@
         </section>
         <section id="vision">
             <div class="visioncontent">
-                <h2>Our Vision</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                </p>
-                <a href="#">Learn more<i class="im im-play" class="playbutton"></i></a>
+                <div class="visionmore">
+                    <h2>Our Vision</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
+                        metus.
+                    </p>
+                    <a href="#">Learn more<i class="im im-play" class="playbutton"></i></a>
+                </div>
             </div>
         </section>
 
@@ -182,7 +186,6 @@
                 </div>
             </div>
         </section>
-
         <section id="contactus">
             <div class="contactcontent">
                 <h2>Contact us</h2>
@@ -228,8 +231,8 @@
                         </table>
                     </div>
                     <div class="location">
-                    <h3>Location</h3>
-                    <iframe
+                        <h3>Location</h3>
+                        <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
@@ -237,11 +240,9 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <ul class="footer-content">
-            <li>&copy;Copyright Three Star Media 2020</li>
-            <li><span>All images are taken from <a href="https://unsplash.com">Unplash</a></span></li>
-        </ul>
+    <footer>
+        <p>&copy;Copyright Three Star Media 2020</p>
+        <p>All images are taken from <a href="https://unsplash.com">Unplash</p>
     </footer>
 </body>
 
