--- a/final-project/index.html
+++ b/final-project/index.html
@@ -241,8 +241,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;Copyright Three Star Media 2020</p>
-        <p>All images are taken from <a href="https://unsplash.com">Unplash</p>
+        <p>&copy;Copyright The Merry Dairy</p>
     </footer>
 </body>
 
